--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
     </header>
     <main class="container mx-auto mt-8">
         <section class="bg-gray-100 p-4 m-4">
-            <input id="search-field" type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
+            <input id="search-field" type="text" placeholder="Search your gadget here" class="input input-bordered w-full max-w-xs" />
             <button class="btn btn-accent" onclick="handleSearch()">Search</button>
         </section>
-
+        <!-- search result -->
         <section>
+            <!-- spinner or loader -->
+            <div id="loading-infinity" class="text-center my-40 hidden">
+                <span class="loading loading-infinity loading-lg"></span>
+            </div>
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 ">
                 <!-- <div class="card w-96 bg-base-100 shadow-xl">
                     <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
@@ -32,6 +36,9 @@
                         </div>
                     </div>
                 </div> -->
+            </div>
+            <div id="show-all-container" class="hidden text-center my-8">
+                <button onclick="handleShowAll()" class="btn btn-accent">Show All</button>
             </div>
         </section>
     </main>
