--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </header>
     <main class="container mx-auto mt-8">
         <section class="bg-gray-100 p-4 m-4">
-            <input id="search-field" type="text" placeholder="Search your gadget here" class="input input-bordered w-full max-w-xs" />
+            <input id="search-field" type="text" placeholder="Search your gadget here"
+                class="input input-bordered w-full max-w-xs" />
             <button class="btn btn-accent" onclick="handleSearch()">Search</button>
         </section>
         <!-- search result -->
@@ -41,6 +42,21 @@
                 <button onclick="handleShowAll()" class="btn btn-accent">Show All</button>
             </div>
         </section>
+
+        <!-- Show details Modal -->
+        <!-- Open the modal using ID.showModal() method -->
+        <dialog id="show_details_modal" class="modal modal-bottom sm:modal-middle">
+            <div class="modal-box">
+                <h3 id="show-detail-phone-name" class="font-bold text-lg">Hello!</h3>
+                <p class="py-4">Press ESC key or click the button below to close</p>
+                <div class="modal-action">
+                    <form method="dialog">
+                        <!-- if there is a button in form, it will close the modal -->
+                        <button class="btn">Close</button>
+                    </form>
+                </div>
+            </div>
+        </dialog>
     </main>
     <footer>
 
